--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.nutrirateapp.HomeFragment"
-        android:label="@string/navbar_home"
+        android:name="com.example.nutrirateapp.view.main.ui.home.HomeFragment"
+        android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_history"
-        android:name="com.example.nutrirateapp.HistoryFragment"
-        android:label="@string/navbar_history"
+        android:name="com.example.nutrirateapp.view.main.ui.history.HistoryFragment"
+        android:label="@string/title_notifications"
         tools:layout="@layout/fragment_history" />
 </navigation>
