LOGIN REGIS UDAH BISA

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         android:id="@+id/tvBelumPunyaAkun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="232dp"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/nunitoextrabold"
@@ -35,7 +35,7 @@
         android:textColor="@color/green_splash"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.943"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -138,31 +138,41 @@
             android:layout_marginBottom="30dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/passwordEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/form_nama_shape"
-                android:fontFamily="@font/nunitoblack"
-                android:hint="@string/login_password"
-                android:inputType="textPassword"
-                android:letterSpacing="0.1"
-                android:textColor="#000000"
-                android:textSize="10sp" />
+            android:id="@+id/passwordEditText"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:background="@drawable/form_nama_shape"
+             android:fontFamily="@font/nunitoblack"
+             android:hint="@string/login_password"
+             android:inputType="textPassword"
+             android:letterSpacing="0.1"
+             android:textColor="#000000"
+             android:textSize="10sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
         <Button
-            android:id="@+id/registerButton"
+            android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/green_splash"
             android:fontFamily="@font/nunitoextrabold"
-            android:text="@string/regis_buatakun"
+            android:text="@string/login_masukdisini"
             android:textColor="@color/buat_akun_color"
             android:textSize="12sp"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="649dp" />
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:indeterminateTint="@color/green_splash"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
