--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="abu">#B9B9B4</color>
     <color name="transparent">#00000000</color>
     <color name="red">#E33636</color>
+    <color name="grey">#7B7B7B</color>
+
 
 
     <color name="_bg__signup_page_ek2_color">#DCFAD7</color>
