--- a/app/src/main/res/drawable/form_login_shape.xml
+++ b/app/src/main/res/drawable/form_login_shape.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- form_login from your XD file. -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-	android:shape="rectangle" >
-	<corners android:radius="24dp" />
-	<stroke android:color="#91c788" android:width="2dp" />
-	<solid android:color="@color/form_login_color" />
+	android:shape="rectangle">
+	<corners
+		android:topLeftRadius="24dp"
+		android:topRightRadius="24dp"
+		android:bottomLeftRadius="0dp"
+		android:bottomRightRadius="0dp" />
+	<stroke
+		android:color="#91c788"
+		android:width="2dp" />
+	<solid
+		android:color="@color/form_login_color" />
 </shape>
-
