--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,160 +9,152 @@
     tools:context=".view.register.RegisterActivity">
 
     <TextView
-        android:id="@+id/titleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:fontFamily="@font/nunitoextrabold"
-        android:letterSpacing="0.1"
-        android:text="@string/nutrirate"
-        android:textColor="@color/green_splash"
-        android:textSize="42sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/tvBelumPunyaAkun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="232dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="16dp"
         android:clickable="true"
         android:focusable="true"
-        android:fontFamily="@font/nunitoextrabold"
-        android:letterSpacing="0.1"
         android:text="@string/login_belumakun"
-        android:textColor="@color/green_splash"
+        android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.056"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/titleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="130dp"
+        android:text="@string/nutrirate"
+        android:textColor="@color/green_splash"
+        android:textSize="42sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/tvBelumPunyaAkun"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/subtitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/regis_hidupsehat"
-        android:fontFamily="@font/nunitoblack"
         android:textSize="16sp"
         android:letterSpacing="0.1"
-        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/titleText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/formContainer"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="130dp"
         android:background="@drawable/form_login_shape"
         android:orientation="vertical"
         android:padding="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/subtitleText">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/subtitleText"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
             android:id="@+id/introText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/nunitoblack"
-            android:letterSpacing="0.1"
+            android:layout_marginBottom="8dp"
             android:text="@string/login_selamat"
             android:textColor="#000000"
-            android:textSize="15sp" />
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/descriptionText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:fontFamily="@font/nunitoextrabold"
-            android:letterSpacing="0.1"
+            android:layout_marginBottom="16dp"
             android:text="@string/login_selamatdatang"
             android:textColor="#000000"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
 
-        <!-- Email TextView -->
         <TextView
             android:id="@+id/emailText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/nunitoblack"
+            android:layout_marginBottom="8dp"
             android:text="@string/regis_email"
             android:textColor="#000000"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-        <!-- Email input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp">
+            android:layout_marginBottom="16dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/emailEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/form_nama_shape"
-                android:fontFamily="@font/nunitoblack"
                 android:hint="@string/regis_contohemail"
                 android:inputType="textEmailAddress"
-                android:letterSpacing="0.1"
                 android:textColor="#000000"
-                android:textSize="10sp" />
+                android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- Password TextView -->
         <TextView
             android:id="@+id/passwordText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/nunitoblack"
+            android:layout_marginBottom="8dp"
             android:text="@string/regis_password"
             android:textColor="#000000"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-        <!-- Password input -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp">
+            android:layout_marginBottom="16dp">
 
             <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordEditText"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:background="@drawable/form_nama_shape"
-             android:fontFamily="@font/nunitoblack"
-             android:hint="@string/login_password"
-             android:inputType="textPassword"
-             android:letterSpacing="0.1"
-             android:textColor="#000000"
-             android:textSize="10sp" />
+                android:id="@+id/passwordEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/form_nama_shape"
+                android:hint="@string/login_password"
+                android:inputType="textPassword"
+                android:textColor="#000000"
+                android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:id="@+id/forgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginBottom="16dp"
+            android:text="@string/lupa_password"
+            android:textColor="@color/green_splash"
+            android:textSize="12sp"
+            android:clickable="true"
+            android:focusable="true" />
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/green_splash"
-            android:fontFamily="@font/nunitoextrabold"
             android:text="@string/login_masukdisini"
             android:textColor="@color/buat_akun_color"
-            android:textSize="12sp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="649dp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <ProgressBar
@@ -173,6 +166,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
