--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/_bg__signup_page_ek2_color">
 
-    <!-- Back Button -->
+
     <ImageView
         android:id="@+id/btn_back"
         android:layout_width="24dp"
@@ -17,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="16dp" />
 
-    <!-- Profile Section -->
+
     <androidx.cardview.widget.CardView
         android:id="@+id/profile_section"
         android:layout_width="0dp"
@@ -26,22 +25,25 @@
         app:layout_constraintTop_toBottomOf="@id/btn_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="10dp"
         android:layout_margin="16dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="16dp">
+            android:padding="24dp">
 
-            <!-- Profile Picture -->
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cdv_photo"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginEnd="16dp"
-                app:cardCornerRadius="50dp"
+                app:cardCornerRadius="40dp"
                 app:cardElevation="2dp">
+
 
                 <ImageView
                     android:id="@+id/img_profile"
@@ -50,37 +52,39 @@
                     android:contentDescription="@string/profile_image"
                     android:src="@drawable/img_photo" />
 
+
             </androidx.cardview.widget.CardView>
 
 
-            <!-- Profile Info -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_vertical">
 
+
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Jonathan Putra"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     android:textColor="@color/black" />
+
 
                 <TextView
                     android:id="@+id/tv_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="jhonputra00@gmail.com"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textColor="@color/black" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <!-- Options Section -->
+
     <androidx.cardview.widget.CardView
         android:id="@+id/options_section"
         android:layout_width="0dp"
@@ -89,13 +93,16 @@
         app:layout_constraintTop_toBottomOf="@id/profile_section"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="10dp"
         android:layout_margin="16dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp">
+
 
             <TextView
                 android:id="@+id/tv_edit_profile"
@@ -108,10 +115,12 @@
                 android:drawableEnd="@drawable/ic_arrow"
                 android:drawablePadding="8dp" />
 
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/abu" />
+
 
             <TextView
                 android:id="@+id/tv_change_password"
@@ -124,10 +133,12 @@
                 android:drawableEnd="@drawable/ic_arrow"
                 android:drawablePadding="8dp" />
 
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/abu" />
+
 
             <TextView
                 android:id="@+id/tv_delete_account"
@@ -142,22 +153,44 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <!-- More Section -->
+
+    <TextView
+        android:id="@+id/tv_more"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="16dp"
+        android:text="More"
+        android:gravity=""
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/options_section"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
     <androidx.cardview.widget.CardView
         android:id="@+id/more_section"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/options_section"
+        app:layout_constraintTop_toBottomOf="@id/tv_more"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp">
+        app:cardCornerRadius="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp">
+
 
             <TextView
                 android:id="@+id/tv_help_support"
@@ -170,10 +203,12 @@
                 android:drawableEnd="@drawable/ic_arrow"
                 android:drawablePadding="8dp" />
 
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/abu" />
+
 
             <TextView
                 android:id="@+id/tv_about_app"
@@ -188,7 +223,7 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <!-- Logout Button -->
+
     <Button
         android:id="@+id/btn_logout"
         android:layout_width="125dp"
@@ -199,8 +234,9 @@
         android:text="Keluar"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.982"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/more_section" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
