--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,6 @@
     android:fitsSystemWindows="false"
     tools:context=".view.main.ui.home.HomeFragment">
 
-
     <!-- Header Layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header_layout"
@@ -40,7 +39,6 @@
             android:id="@+id/profile_section"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +76,6 @@
 
         </LinearLayout>
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Hello Text -->
@@ -87,12 +84,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
         android:alpha="0"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
         android:text="@string/hello"
-        android:textColor="@color/black"
-        android:textSize="14sp"
+        android:textColor="@color/green_splash"
+        android:textSize="22sp"
         app:layout_constraintTop_toBottomOf="@id/header_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,12 +103,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="32dp"
+        android:gravity="center_horizontal"
         android:alpha="0"
         android:text="@string/slogan"
-        android:textColor="@color/black"
-        android:textSize="14sp"
+        android:textColor="@color/grey"
+        android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@id/hello"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,12 +119,15 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="180dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@id/slogan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
-        app:srcCompat="@drawable/nutri_onboarding1" />
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/img_home" />
 
     <!-- Title Text -->
     <TextView
@@ -132,14 +135,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:alpha="0"
+        android:layout_marginTop="30dp"
         android:text="@string/what_is_nutrirate"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:alpha="100" />
@@ -154,8 +157,10 @@
         android:layout_marginEnd="32dp"
         android:alpha="0"
         android:text="@string/nutrirate_desc"
-        android:textColor="@color/black"
+        android:textColor="@color/grey"
+        android:justificationMode="inter_word"
         android:textSize="14sp"
+        android:lineSpacingExtra="7dp"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
