--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -126,7 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.example.nutrirateapp.view.customview.EmailCustomView
                 android:id="@+id/emailEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -154,7 +154,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.example.nutrirateapp.view.customview.PasswordCustomView
                 android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
